Finalizado el cambio de idiomas

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,23 @@ body {
   font-size: .8rem;
 }
 
+.flags {
+  width: 75px;
+  display: flex;
+  gap: .4em;
+  align-items: center;
+  justify-content: space-between; 
+}
+
+.flags__item {
+  width: 30px;
+}
+
+.flags__img {
+  cursor: pointer;
+  display: block;
+}
+
 .colors {
   display: flex;
   justify-content: space-between;
