--- a/css/styles.css
+++ b/css/styles.css
@@ -39,13 +39,16 @@ body {
 }
 
 .header {
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 75px;
+  width: 100%;
   padding: 0 1.5em;
   background-color: var(--bg-card-color);
   transition: var(--transition);
+  z-index: 1;
 }
 
 .toggle-theme {
@@ -79,6 +82,11 @@ body {
 .flags__img {
   cursor: pointer;
   display: block;
+  transition: transform 0.2s ease-in-out;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 .colors {
@@ -96,6 +104,12 @@ body {
   border-radius: 25%;
   background-color: var(--primary-color);
   cursor: pointer;
+
+  transition: transform 0.2s ease-in-out;
+
+  &:hover {
+    transform: scale(1.2);
+  }
   
 }
 
@@ -124,6 +138,7 @@ body {
 .main {
   display: grid;
   padding: 2em;
+  padding-top: 7em;
   gap: .5em;
 }
 
